--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "@react-three/rapier": "^2.1.0",
+    "@types/three": "^0.179.0",
     "framer-motion": "^12.23.12",
+    "gl-matrix": "^3.4.4",
     "gsap": "^3.13.0",
     "next": "15.4.6",
     "ogl": "^1.0.11",
